--- a/package.json
+++ b/package.json
@@ -25,5 +25,9 @@
 		"tailwindcss": "^4.0.0",
 		"typescript": "^5.0.0",
 		"vite": "^6.0.0"
+	},
+	"dependencies": {
+		"@google/genai": "^0.6.0",
+		"@google/generative-ai": "^0.24.0"
 	}
 }
