--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
 	},
 	"dependencies": {
 		"@google/genai": "^0.6.0",
-		"@google/generative-ai": "^0.24.0"
+		"@google/generative-ai": "^0.24.0",
+		"svelte-exmarkdown": "^5.0.0"
 	}
 }
