style: polish layout

--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
 		"@google/genai": "^0.6.0",
 		"@google/generative-ai": "^0.24.0",
 		"marked": "^15.0.7",
-		"svelte-exmarkdown": "^5.0.0"
+		"svelte-exmarkdown": "^5.0.0",
+		"svelte-loading-spinners": "^0.3.6"
 	}
 }
